--- a/server/package.json
+++ b/server/package.json
@@ -4,8 +4,8 @@
   "description": "Dog API Server",
   "main": "index.js",
   "scripts": {
-    "start": "tsx index.ts",
-    "dev": "tsx watch index.ts",
+    "start": "node dist/index.js",
+    "dev": "ts-node-dev src/index.ts",
     "build": "tsc",
     "test": "vitest",
     "test:ui": "vitest --ui",
@@ -23,8 +23,11 @@
   "devDependencies": {
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
-    "@types/node": "^20.10.0",
+    "@types/node": "^20.19.33",
+    "@types/supertest": "^6.0.3",
+    "supertest": "^7.2.2",
     "tsx": "^4.7.0",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "vitest": "^3.2.4"
   }
 }
